add env var settings